# Artifice

./: .gitignore  Baby_TensorFlow.py  Dockerfile  Examples.ipynb  Func_Rules.md  In-Development.ipynb  LICENSE  Linear_Regression.ipynb  Manifest.in  NN_Class.ipynb  Neural_Net.ipynb  Picture_Recoloration.ipynb  README.md  Saved_Model  Test_Notebook.ipynb  Tutorial.ipynb  activation_funcs_library.txt  loss_funcs_library.txt  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: In-Development-checkpoint.ipynb  Linear_Regression-checkpoint.ipynb  Tutorial-checkpoint.ipynb
Example Data/: WEO_Data-3.csv
Examples/: Examples.ipynb  Linear_Regression.ipynb  Picture_Recoloration.ipynb
Saved Models/: Saved_Model
examples/: Linear_Regression.ipynb  artifice_tutorial.ipynb
src/Artifice/: Artifice.py  Artifice_Tutorial.ipynb  helper.py
src/Artifice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/DeepLeap.egg-info/: PKG-INFO  SOURCES.txt
src/artifice/: activation_funcs_library.txt  helper.py  loss_functions.py
tests/: test_artifice.py  test_helper.py
