[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Artifice"
version = "0.0.1"
authors = [
  { name="William Bidle", email="author@example.com" },
  { name="Ilana Zane", email="author@example.com" },
]
description = "A homemade machine learning platform modeled after TensorFlow"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WilliamBidle/Baby-TensorFlow"
"Bug Tracker" = "https://github.com/WilliamBidle/Baby-TensorFlow/issues"